@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_share_image"
+          android:orderInCategory="0"
+          android:title="@string/menu_share"
+          android:icon="@drawable/ic_action_share_dark"
+          android:showAsAction="always" />
+
     <item android:id="@+id/menu_save_image"
-        android:orderInCategory="0"
+        android:orderInCategory="1"
         android:title="@string/menu_save_image"
         android:icon="@drawable/ic_action_save"
         android:showAsAction="always" />
