@@ -2,6 +2,7 @@
     &#8226; Auto-complete hashtags<br/>
     &#8226; Mute by client (long press the timestamp)<br/>
     &#8226; View pictures from twitters native client in direct messages<br/>
+    &#8226; Share your pictures from the photo viewer dialog to any apps<br/>
 <br/><br/>
 
 <b>Version 2.4.7:</b><br/><br/>
